# onmetal-ironic-hardware-manager

./: requirements.txt  setup.cfg
onmetal_ironic_hardware_manager/: __init__.py  bios.py
onmetal_ironic_hardware_manager/tests/: manager.py
